--- a/lesson_13/css/style.css
+++ b/lesson_13/css/style.css
@@ -10,7 +10,7 @@
 @import url("reset.css");
 
 /* Компоненти */
-@import url("button.css");
+/* @import url("button.css"); */
 /* .... */
 
 /* Основні стилі */
