--- a/lesson_14/css/style.css
+++ b/lesson_14/css/style.css
@@ -1,7 +1,7 @@
 /* Підключення шрифтів */
 
 /* Google Fonts (Plugin) */
-/* @import url("https://fonts.googleapis.com/css?family=Manrope:regular,500,600,700&display=swap"); */
+@import url(https://fonts.googleapis.com/css?family=Poppins:regular,500,600&display=swap);
 
 /* Локальне підключення шрифтів */
 @import url("fonts.css");
@@ -36,8 +36,8 @@
 }
 
 body {
-  font-family: "Gilroy", sans-serif;
-  color: #fff;
+  font-family: "Poppins", sans-serif;
+  color: #1A1A1A;
 }
 
 .wrapper {
@@ -51,3 +51,404 @@ body {
 .wrapper>main {
   flex-grow: 1;
 }
+
+.page {
+  font-size: 14px;
+  line-height: 150%;
+  font-weight: 400;
+}
+
+.container {
+  max-width: 1360px;
+  padding: 0 20px;
+  margin: 0 auto;
+}
+
+.page__form {}
+
+.form {}
+
+.checkout {
+  display: flex;
+  gap: 24px;
+  flex-wrap: wrap;
+}
+
+.checkout__form {
+  flex-basis: 872px;
+  flex-grow: 1;
+  flex-shrink: 1;
+}
+
+.billing-information {
+  padding-bottom: 32px;
+  margin-bottom: 32px;
+  border-bottom: 1px solid #E6E6E6;
+}
+
+.billing-information__title,
+.additional-info__title {
+  font-size: 24px;
+  font-weight: 500;
+  margin-bottom: 20px;
+}
+
+.billing-information__name {
+  display: flex;
+  gap: 16px;
+  flex-wrap: wrap;
+}
+
+.billing-information__name>div {
+  flex-basis: 280px;
+  flex-grow: 1;
+  flex-shrink: 1;
+}
+
+.billing-information__first-name {}
+
+.label input,
+.label select {
+  height: 49px;
+  border: 1px solid #E6E6E6;
+  border-radius: 6px;
+  padding-left: 16px;
+  margin-bottom: 16px;
+}
+
+.label select {
+  width: 100%;
+  appearance: none;
+  background-image: url("../img/arrow-select.svg");
+  background-repeat: no-repeat;
+  background-position: right 16px center;
+  background-size: 16px 17px;
+  padding-right: 40px;
+}
+
+.label__title {
+  display: block;
+  margin-bottom: 8px;
+}
+
+.billing-information__last-name {}
+
+.billing-information__company-name {}
+
+.billing-information__street {}
+
+.billing-information__location {}
+
+.location {
+  display: flex;
+  gap: 16px;
+  flex-wrap: wrap;
+}
+
+.location>div {
+  flex-basis: 280px;
+  flex-grow: 1;
+  flex-shrink: 1;
+}
+
+.location select {
+  color: #999999;
+}
+
+
+.location__states {}
+
+.location__zip-code {}
+
+.billing-information__contacts {}
+
+.contacts {
+  display: flex;
+  gap: 16px;
+  flex-wrap: wrap;
+}
+
+.contacts>div {
+  flex-basis: 428px;
+  flex-grow: 1;
+  flex-shrink: 1;
+}
+
+.contacts__email {}
+
+.contacts__phone {}
+
+
+
+.billing-information__different-address input {
+  position: absolute;
+  opacity: 0;
+  width: 0;
+  height: 0;
+  pointer-events: none;
+}
+
+.billing-information__different-address .label {
+  position: relative;
+  display: inline-flex;
+  align-items: center;
+  cursor: pointer;
+  gap: 6px;
+  user-select: none;
+}
+
+.billing-information__different-address .label::before {
+  content: '';
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  border: 2px solid #CCCCCC;
+  border-radius: 3px;
+  flex-shrink: 0;
+  background-color: transparent;
+  transition: all 0.2s ease-in-out;
+}
+
+.billing-information__different-address:has(input:checked) label::before {
+  /* background-color: #CCCCCC; */
+}
+
+.billing-information__different-address:has(input:checked) label::after {
+  content: '';
+  position: absolute;
+  top: 5px;
+  left: 7px;
+  width: 6px;
+  height: 10px;
+  border: solid #00B207;
+  border-width: 0 3px 3px 0;
+  transform: rotate(45deg);
+  transition: opacity 0.2s ease-in-out;
+  opacity: 1;
+}
+
+.billing-information__different-address .label::after {
+  content: '';
+  opacity: 0;
+  position: absolute;
+  top: 5px;
+  left: 7px;
+  width: 6px;
+  height: 10px;
+  border: solid #00B207;
+  border-width: 0 3px 3px 0;
+  transform: rotate(45deg);
+  transition: opacity 0.2s ease-in-out;
+}
+
+.billing-information__different-address .label__title {
+  margin-bottom: 0;
+}
+
+.additional-info {}
+
+.additional-info__title {}
+
+.additional-info__notes textarea {
+  width: 100%;
+  border: 1px solid #E6E6E6;
+  height: 100px;
+  padding: 14px 16px;
+  resize: vertical;
+}
+
+.checkout__aside {
+  flex-basis: 424px;
+  padding: 24px;
+  border: 1px solid #E6E6E6;
+  border-radius: 8px;
+  flex-grow: 1;
+  flex-shrink: 1;
+}
+
+.aside {
+  height: min-content;
+}
+
+.aside__order {
+  margin-bottom: 12px;
+}
+
+.order {}
+
+.order__title,
+.payment-method__title {
+  font-size: 20px;
+  font-weight: 500;
+  margin-bottom: 12px;
+}
+
+.order__items {
+  margin-bottom: 12px;
+}
+
+.order__item {}
+
+.item {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 6px;
+  align-items: center;
+}
+
+.item__img {}
+
+.item__title {}
+
+.item__quantity {
+  flex-grow: 1;
+}
+
+.item__quantity::before {
+  content: "x";
+}
+
+.item__price {}
+
+.item__price::before {
+  content: "$";
+}
+
+.order__subtotal {}
+
+.subtotal,
+.shipping,
+.total {
+  display: flex;
+  justify-content: space-between;
+  padding: 12px 0;
+}
+
+.subtotal,
+.shipping {
+  border-bottom: 1px solid #E6E6E6;
+}
+
+.subtotal__title,
+.shipping__title,
+.total__title {
+  color: #4D4D4D;
+}
+
+.subtotal__value {}
+
+.subtotal__value::before {
+  content: "$";
+}
+
+.order__shipping {}
+
+.shipping {}
+
+.shipping__title {}
+
+.shipping__value {}
+
+.order__total {}
+
+.total {}
+
+.total__title {}
+
+.total__value {
+  font-weight: 600;
+}
+
+.total__value::before {
+  content: "$";
+}
+
+.aside__payment-method {}
+
+.payment-method {}
+
+.payment-method__title {
+  margin-bottom: 16px;
+}
+
+.payment-method__radiobuttons {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin-bottom: 24px;
+}
+
+.radiobutton {}
+
+.radiobutton__label {
+  position: relative;
+  padding-left: 26px;
+  cursor: pointer;
+  user-select: none;
+  display: inline-block;
+}
+
+.radiobutton__label::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 18px;
+  height: 18px;
+  border: 1px solid #00B207;
+  border-radius: 50%;
+  background-color: white;
+}
+
+.radiobutton__label:has(.radiobutton__input:checked)::after {
+  content: "";
+  position: absolute;
+  left: 3.15px;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 12px;
+  height: 12px;
+  background-color: #00B207;
+  border-radius: 50%;
+}
+
+.radiobutton__label:has(.radiobutton__input:checked)::before {
+  border: 1.5px solid #00B207;
+}
+
+.radiobutton__input {
+  position: absolute;
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.radiobutton__title {
+  color: #4D4D4D;
+}
+
+.radiobutton.radiobutton--disabled .radiobutton__title {
+  color: #1a1a1a;
+  cursor: not-allowed;
+}
+
+.radiobutton.radiobutton--disabled .radiobutton__label::before {
+  border: 1px solid #CCCCCC;
+}
+
+.radiobutton--disabled {}
+
+.aside__button {
+  text-align: center;
+  width: 100%;
+  font-size: 16px;
+  line-height: 120%;
+  font-weight: 600;
+  padding: 16px 0;
+  background-color: #00B207;
+  color: #fff;
+  border-radius: 43px;
+}
+
+.footer {}
