--- a/lesson_16/css/style.css
+++ b/lesson_16/css/style.css
@@ -13,6 +13,13 @@
 @import url("button.css");
 /* .... */
 
+/*
+Базові значення ширин екранів
+> 992 = PC
+<= 992 >= 768 = Tablet
+< 768 = Mobile Phones
+*/
+
 /* Основні стилі */
 
 .header {
@@ -50,4 +57,19 @@ body {
 
 .wrapper>main {
   flex-grow: 1;
+}
+
+[class*="__container"] {
+  max-width: 1350px;
+  margin: 0 auto;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.ibg {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  aspect-ratio: 312 / 280;
+  /* object-position: top; */
 }
