--- a/lesson_16/css/style.css
+++ b/lesson_16/css/style.css
@@ -1,6 +1,7 @@
 /* Підключення шрифтів */
 
 /* Google Fonts (Plugin) */
+@import url(https://fonts.googleapis.com/css?family=Montserrat:500,700&display=swap);
 /* @import url("https://fonts.googleapis.com/css?family=Manrope:regular,500,600,700&display=swap"); */
 
 /* Локальне підключення шрифтів */
@@ -22,11 +23,8 @@
 
 /* Основні стилі */
 
-.header {
-  text-align: center;
-}
-
 .back-link {
+  text-align: center;
   margin: 20px 0;
   padding: 10px 20px;
   background-color: #28a745;
@@ -43,8 +41,10 @@
 }
 
 body {
-  font-family: "Gilroy", sans-serif;
-  color: #fff;
+  font-family: "Montserrat", sans-serif;
+  color: #000;
+  font-size: 16px;
+  line-height: 1.5;
 }
 
 .wrapper {
@@ -60,16 +60,255 @@ body {
 }
 
 [class*="__container"] {
-  max-width: 1350px;
+  max-width: 1230px;
   margin: 0 auto;
   padding-left: 15px;
   padding-right: 15px;
 }
 
-.ibg {
+
+
+.header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  background: rgba(255, 255, 255, 0.60);
+  backdrop-filter: blur(113.6500015258789px);
+  z-index: 10;
+}
+
+.header__container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 20px;
+  padding-top: 28px;
+  padding-bottom: 25px;
+}
+
+.logo__img {
+  display: flex;
+  align-items: center;
+  gap: 6px;
+  z-index: 10;
+  flex-shrink: 0;
+}
+
+.logo__img span {
+  text-transform: uppercase;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 1.5;
+}
+
+.menu__list {
+  display: flex;
+  gap: 30px;
+  row-gap: 5px;
+  align-items: center;
+  justify-content: center;
+  text-transform: uppercase;
+  flex-wrap: wrap;
+}
+
+.header__actions {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+}
+
+.header__button {
+  flex: 0 0 auto;
+  display: inline-flex;
+  align-items: center;
+  border-radius: 999px;
+  padding: 8px 30px 8px 30px;
+  background-color: #F26522;
+  color: #fff;
+  gap: 12px;
+  cursor: pointer;
+  position: relative;
+  z-index: 10;
+}
+
+.header__button::after {
+  content: "";
+  display: inline-block;
+  width: 19px;
+  height: 16px;
+  background: url('../img/icons/white-arrow.svg') center center / contain no-repeat;
+  transition: transform 0.3s ease;
+}
+
+.header__burger {
+  display: none;
+  z-index: 10;
+}
+
+.hero {
+  text-align: center;
+  height: 606px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
+.hero__bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+  display: block;
+}
+
+.hero__bg img {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  aspect-ratio: 312 / 280;
-  /* object-position: top; */
+  object-position: center;
+  display: block;
+}
+
+.hero__content {
+  position: relative;
+  z-index: 1;
+}
+
+/* для відображення на сенсорних пристроях */
+@media (any-hover: hover) {
+  .menu__item:hover .menu__link {
+    text-decoration: underline;
+  }
+
+  .header__button:hover {
+    text-decoration: underline;
+  }
+
+  .header__button:hover::after {
+    transform: translateX(5px);
+  }
+}
+
+@media (max-width: 1040px) {
+  .menu__list {
+    gap: 15px;
+  }
+}
+
+/* Tablet */
+@media (max-width: 991.98px) {
+  .logo__img span {
+    display: none;
+  }
+}
+
+@media (max-width: 820px) {
+  .menu {
+    font-size: 14px;
+  }
+}
+
+/* Tablet */
+@media (max-width: 767.98px) {
+  .header__container {
+    padding-top: 15px;
+    padding-bottom: 15px;
+  }
+
+  .menu {
+    font-size: 20px;
+  }
+
+  .logo__img span {
+    display: inline-block;
+  }
+
+  .header:has(.header__menu.active) {
+    backdrop-filter: none;
+  }
+
+  .header__burger {
+    position: relative;
+    display: block;
+    width: 40px;
+    height: 18px;
+    /* z-index: 11; */
+  }
+
+  .header__burger::before,
+  .header__burger::after,
+  .header__burger span {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    left: 0;
+    background-color: #000;
+    transition: transform 0.3s ease-in-out, top 0.3s ease-in-out, bottom 0.3s ease-in-out;
+  }
+
+  .header__burger::before {
+    top: 0;
+  }
+
+  .header__burger span {
+    top: 50%;
+    transform: translateY(-50%);
+  }
+
+  .header__burger::after {
+    bottom: 0;
+  }
+
+  .header__burger.active span {
+    transform: scale(0);
+    opacity: 0;
+  }
+
+  .header__burger.active::before {
+    transform: rotate(-45deg) translateY(-1px);
+    top: 50%;
+  }
+
+  .header__burger.active::after {
+    transform: rotate(45deg) translateY(1px);
+    bottom: 50%;
+  }
+
+  .header__menu {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 5;
+    padding-top: 98px;
+    padding: 98px 15px 30px;
+    background-color: #fff;
+    transform: translateX(100%);
+    transition: transform 0.3s ease 0s;
+  }
+
+  .menu__list {
+    flex-direction: column;
+    align-items: self-end;
+    flex-grow: 1;
+  }
+
+  .header__menu.active {
+    transform: translateX(0);
+  }
+
+}
+
+/* Mobile */
+@media (max-width: 479.98px) {
+  .logo__img span {
+    display: none;
+  }
 }
